samples/_failures_safe/1761504260_100120_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_4f449265.c: In function ‘main’:
./samples/SAFE/__tmp_4f449265.c:172:25: error: missing terminating " character
  172 |         fprintf(stderr, "Tokenization error\n
      |                         ^~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_4f449265.c:172:9: error: expected expression at end of input
  172 |         fprintf(stderr, "Tokenization error\n
      |         ^~~~~~~
./samples/SAFE/__tmp_4f449265.c:172:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_4f449265.c:172:9: error: expected declaration or statement at end of input
